docs(devops): 完善 Docker 部署最佳实践文档
- 新增架构设计和部署架构图
- 详细介绍镜像构建流程和优化技巧
- 完整的 Docker Compose 编排配置说明
- Nginx 反向代理和负载均衡配置
- 数据持久化和备份策略
- 远程调试和健康检查配置
- 日志管理和性能优化指南
- 安全配置检查清单
- 常见问题排查和运维脚本

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>